# polyamonds-puzzle-solver

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/gla_puzzle/: __init__.py  grid.py  piece.py  plot.py  point.py  solver.py  triangle.py
src/gla_puzzle/puzzles/: __init__.py  luciano.py  nicola.py  xtechai.py
src/gla_puzzle/solvers/: __init__.py  brute_force.py  cpsat.py
src/polyamonds_puzzle_solver/: __init__.py  grid.py  piece.py  plot.py  point.py  triangle.py
src/polyamonds_puzzle_solver/puzzles/: daniel.py  luciano.py  nicola.py  xtechai.py
src/polyamonds_puzzle_solver/solvers/: brute_force.py  cpsat.py
