[project]
name = "polyamonds-puzzle-solver"
version = "0.1.0"
description = "Solver for tangram-like polyamonds puzzles"
readme = "README.md"
authors = [
    { name = "Giacomo Gattoni", email = "ggattoni3@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "frozendict>=2.4.6",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "ortools>=9.11.4210",
    "tqdm>=4.67.1",
]

[project.scripts]
pps = "polyamonds_puzzle_solver:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "commitizen>=4.1.1",
    "ipython>=8.32.0",
    "pre-commit>=4.1.0",
    "pyinstrument>=5.0.1",
    "ruff>=0.9.4",
]

[tool.ruff]
line-length = 120
indent-width = 4
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812", "ERA", "PLR0913", "T201", "B008", "D100", "INP001", "TD", "FIX002"]

[tool.ruff.format]
indent-style = "space"
docstring-code-format = true
